--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gestión - Residencia Estudiantil</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="pocketbase-api.js"></script>
+    <script src="app.js"></script>
 </head>
 <body class="bg-gray-50">
     <div class="flex h-screen">
-        <!-- Sidebar -->
-        <aside class="w-64 bg-gray-900 text-white shadow-lg">
+        <aside class="w-64 bg-gray-900 text-white shadow-lg flex flex-col">
             <div class="p-6 border-b border-gray-800">
                 <h1 class="text-2xl font-bold">SG Residencia</h1>
                 <p class="text-sm text-gray-400 mt-1">Sistema de Gestión</p>
             </div>
 
-            <nav class="mt-6">
+            <nav class="mt-6 flex-1 overflow-y-auto">
                 <div class="px-4 py-2 text-xs font-semibold text-gray-400 uppercase tracking-wider">
                     Menú Principal
                 </div>
@@ -23,114 +24,104 @@
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
                     </svg>
-                    Dashboard
+                    <span>Panel de Control</span>
                 </a>
-
-                <div class="px-4 py-2 text-xs font-semibold text-gray-400 uppercase tracking-wider mt-6">
-                    Gestión Académica
-                </div>
                 <a href="#/carreras" onclick="navigateTo('carreras')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C6.5 6.253 2 10.998 2 17s4.5 10.747 10 10.747c5.5 0 10-4.998 10-10.747C22 10.998 17.5 6.253 12 6.253z"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
                     </svg>
-                    Carreras
+                    <span>Carreras</span>
                 </a>
                 <a href="#/estudiantes" onclick="navigateTo('estudiantes')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path>
                     </svg>
-                    Estudiantes
+                    <span>Estudiantes</span>
                 </a>
-                <a href="#/evaluaciones" onclick="navigateTo('evaluaciones')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-                    </svg>
-                    Evaluaciones
-                </a>
-
-                <div class="px-4 py-2 text-xs font-semibold text-gray-400 uppercase tracking-wider mt-6">
-                    Gestión de Residencia
-                </div>
                 <a href="#/edificios" onclick="navigateTo('edificios')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
                     </svg>
-                    Edificios
+                    <span>Edificios</span>
                 </a>
                 <a href="#/cuartos" onclick="navigateTo('cuartos')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
                     </svg>
-                    Cuartos
+                    <span>Cuartos</span>
                 </a>
+                <a href="#/evaluaciones" onclick="navigateTo('evaluaciones')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <span>Evaluaciones</span>
+                </a>
+
+                <div class="px-4 py-2 mt-4 text-xs font-semibold text-gray-400 uppercase tracking-wider">
+                    Gestión de Residencia
+                </div>
                 <a href="#/cuartelerias" onclick="navigateTo('cuartelerias')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
                     </svg>
-                    Cuartelerías
+                    <span>Cuartelerías</span>
                 </a>
                 <a href="#/medios" onclick="navigateTo('medios')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m0 0l8 4m-8-4v10l8 4m0-10l8 4m-8-4v10"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path>
                     </svg>
-                    Medios Básicos
+                    <span>Medios Básicos</span>
                 </a>
                 <a href="#/sanciones" onclick="navigateTo('sanciones')" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4v.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                     </svg>
-                    Sanciones
+                    <span>Sanciones</span>
                 </a>
 
-                <div class="px-4 py-2 text-xs font-semibold text-gray-400 uppercase tracking-wider mt-6">
+                <div class="px-4 py-2 mt-4 text-xs font-semibold text-gray-400 uppercase tracking-wider">
                     Sesión
                 </div>
-                <a href="#/login" onclick="logout()" class="nav-link px-4 py-3 text-gray-300 hover:bg-gray-800 hover:text-white flex items-center gap-3">
+                <a href="javascript:void(0)" onclick="logout()" class="px-4 py-3 text-red-400 hover:bg-gray-800 hover:text-red-300 flex items-center gap-3">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                     </svg>
-                    Cerrar Sesión
+                    <span>Cerrar Sesión</span>
                 </a>
             </nav>
         </aside>
 
-        <!-- Main Content -->
-        <main class="flex-1 flex flex-col overflow-hidden">
-            <!-- Top Bar -->
-            <div class="bg-white shadow-sm border-b border-gray-200">
+        <main class="flex-1 flex flex-col min-w-0 bg-white">
+            <div class="bg-white border-b border-gray-200 shadow-sm">
                 <div class="px-6 py-4 flex justify-between items-center">
                     <div>
-                        <h2 class="text-xl font-semibold text-gray-900" id="pageTitle">Dashboard</h2>
+                        <h2 class="text-xl font-semibold text-gray-900" id="pageTitle">Panel de Control</h2>
                         <p class="text-sm text-gray-600 mt-1" id="pageSubtitle">Resumen del sistema</p>
                     </div>
                     <div class="flex items-center gap-4">
                         <span class="text-sm text-gray-700">Usuario: <strong id="userName">Admin</strong></span>
-                        <button onclick="logout()" class="text-gray-600 hover:text-gray-900">
+                        <button onclick="logout()" class="text-gray-600 hover:text-gray-900 flex items-center">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                             </svg>
                         </button>
                     </div>
                 </div>
             </div>
 
-            <!-- Content Area -->
             <div class="flex-1 overflow-auto">
                 <div id="content" class="px-6 py-6">
-                    <!-- Contenido dinámico se carga aquí -->
+
+                    
                 </div>
             </div>
         </main>
     </div>
 
-    <!-- Notificaciones -->
-    <div id="notification" class="fixed top-4 right-4 hidden p-4 rounded-lg shadow-lg" role="alert">
+    <div id="notification" class="fixed top-4 right-4 hidden p-4 rounded-lg shadow-lg z-50" role="alert">
         <div class="flex items-center gap-2">
             <span id="notificationText"></span>
         </div>
     </div>
-
-    <script src="pocketbase-api.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
